# japan-geoid

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.txt  README.md  isg2asc.py  patch_esm.py
.github/: codecov.yml
.github/workflows/: maturin.yml  test.yml
examples/: convert_asc_to_bin_gz.rs  convert_asc_to_bin_lz4.rs  use_embedded_gsigeo2011.rs
japan-geoid-py/: Cargo.toml  LICENSE.txt  README.md  japan_geoid.pyi  pyproject.toml
japan-geoid-py/examples/: convert_asc_to_bin.py  geog2geoc.py  pure_python_gsi_geoid.py
japan-geoid-py/src/: lib.rs
japan-geoid-py/tests/: test_simple.py
src/: gsi.rs  gsigeo2011_ver2_2.bin.lz4  hrefconv2024.bin.lz4  lib.rs  wasm.rs
