# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "japan-geoid"
version = "0.2.1"
edition = "2021"
authors = [
    "Taku Fukada <naninunenor@gmail.com>",
    "MIERUNE Inc. <info@mierune.co.jp>",
]
description = "Calculating geoid heights in Japan using GSI's geoid model."
license-file = "LICENSE.txt"
repository = "https://github.com/MIERUNE/japan-geoid"

[dependencies]
lz4_flex = "0.11.1"

[workspace]
resolver = "2"
members = ["./japan-geoid-py"]

[profile.dev.package."*"]
opt-level = 1
