# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["./japan-geoid-*"]

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = [
    "Taku Fukada <naninunenor@gmail.com>",
    "MIERUNE Inc. <info@mierune.co.jp>",
]
description = "Calculates geoid heights for Japan using GSI's geoid model."
license = "MIT"
repository = "https://github.com/MIERUNE/japan-geoid"
categories = ["science", "science::geo"]

[package]
name = "japan-geoid"
version.workspace = true
edition.workspace = true
categories.workspace = true
authors.workspace = true
description.workspace = true
license = "MIT"
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lz4_flex = { version = "0.11.1", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.93"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.dev.package."*"]
opt-level = 1
