[package]
name = "japan-geoid-py"
version = "0.4.1"
edition.workspace = true
categories.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "japan_geoid"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.2"
numpy = "0.21.0"
japan-geoid = { path = "../" }
