[package]
name = "japan-geoid-py"
version = "0.5.0"
edition.workspace = true
categories.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "japan_geoid"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.1"
numpy = "0.24.0"
japan-geoid = { path = "../" }
